--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -5,18 +5,18 @@
 % @license see 'LICENSE' file
 %
 
-\chapter*{Acknowledgements}
+\chapter*{Acknowledgements and Thanks}
 \addcontentsline{toc}{chapter}{Acknowledgements and Thanks}
 
-I wish to thank my thesis advisors, Prof. Dr. Christian Icking and Dr. Lihong Ma, for accepting 
+I wish to thank both my thesis advisors, Prof. Dr. Christian Icking and Dr. Lihong Ma, for accepting
 and supporting this project, for their advice and our regular discussions, the friendly atmosphere, 
 as well as for always being available for questions.
 
-Equal thanks to Dr. Martin B\"ohm, leader of the spectroscopy group at the ILL and instrument 
-scientist at the \textit{Thales} spectrometer, to Yannick Le Goc (computer scientist at the instrument 
-control and electronics group), as well as Dr. Paul Steffens (\textit{Thales} instrument scientist) for our 
+Equal thanks go to Dr. Martin B\"ohm, leader of the spectroscopy group at the ILL and instrument
+scientist at the \textit{Thales} spectrometer, to Yannick Le Goc (computer scientist at the ILL's instrument
+control and electronics group), as well as to Dr. Paul Steffens (\textit{Thales} instrument scientist) for our
 regular discussions about various triple-axis automatisation projects, our experiments and the
-instrumental aspects. I furthermore wish to thank Jérôme Locatelli (instrument control group) for
+instrumental aspects. I furthermore wish to thank Jérôme Locatelli from the ILL's instrument control group for
 all the help with \textit{NOMAD}, the instrument control system at the ILL, and the technical discussions
 about its internal details. 
 Thanks to Dr. Paolo Mutti, the head of both the scientific computing and the instrument control group 
@@ -26,6 +26,6 @@ Also not to forget the continuing support from my former advisor for past theses
 as well as from Prof. Dr. Christian Pfleiderer, Prof. Dr. Markus Garst, and Dr. Marc Janoschek in all our ongoing projects.
 
 Financial support by the Institut Laue-Langevin via its \textit{P\^ole Formation} is gratefully acknowledged,
-an I wish to thank Carole Fauchier for the administrative help.
+and I wish to thank Carole Fauchier for all the administrative help.
 
 Last but not least also many thanks to my family and to Soilhat for always being there for me!
