--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -617,7 +617,7 @@ We now only need to specify a cost function to define what \textit{optimal} mean
 
 \paragraph{Shortest path}
 The most obvious possibility for a cost function is the length of the Voronoi diagram's edges, 
-for the linear bisectors this is simply the Euclidian 2-norm,
+for the linear bisectors this is simply the Euclidian 2-norm \cite[p. 736]{Arens2015},
 \begin{equation}
 	f^{\mathrm{cost}}_1\left(\underline{v}, \underline{w} \right) \ = \ 
 	\left\Vert \underline{v} - \underline{w} \right\Vert_2 \ =\ \sqrt{\sum_i \left(v_i - w_i\right)^2},
