--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -32,7 +32,7 @@ It is described in detail in section \ref{sec:gui}.
 Finally, the software allows scripting via \textit{Python} \cite{Rossum2011, web_python}. 
 Apart from simply setting up a workflow and plotting the results, the \textit{Python} interface 
 aims to allow the usage of the software in \textit{Python}-based instrument control systems such as 
-\textit{NICOS} \cite{web_NICOS}, which is used at the Forschungsreaktor M\"unchen II (FRM-II). 
+\textit{NICOS} \cite{web_NICOS}, which is used at the Forschungsreaktor M\"unchen II (FRM-II) \cite{web_mlz}. 
 Details on the scripting interface can be found in section \ref{sec:scripting}.
 
 
@@ -132,8 +132,8 @@ parameters.
 		\label{fig:gui_xtal}}
 \end{wrapfigure}
 
-Dock window (a) of the main GUI (Fig. \ref{fig:gui}) sets up the metric tensor corresponding 
-to the crystal $UB$ matrix using the sample definition.
+Dock window (a) of the main GUI (Fig. \ref{fig:gui}) sets up the metric tensor \cite[pp. 807-809]{Arens2015}
+corresponding to the crystal $UB$ matrix using the sample definition.
 A magnified view of this window is provided in Fig. \ref{fig:gui_xtal}. 
 As seen before, the $UB$ matrix transforms the crystal coordinate system into the instrument's 
 laboratory coordinate system.
