--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -66,7 +66,7 @@ atoms \cite[p. 30]{Stacey2007}, i.e. the neutrons take the temperature and thus 
 \section{Instruments for neutron scattering \label{sec:instruments}}
 
 While a modern research reactor houses a multitude of different instrument types, among them time-of-flight,
-back-scattering and spin-echo spectrometers, furthermore Larmor, Laue and small-angle diffractometers, in
+back-scattering and spin-echo spectrometers, furthermore Larmor, Laue and small-angle diffractometers (see, for example, Ref. \cite{ExperimentalFacilites} for an explanation of these types of instrument), in
 this section, we instead want to shortly present the most basic types of instrument, the two-axis diffractometer
 and the triple-axis spectrometer. Together, the discovery of these two instruments by Clifford Shull and Bertram Brockhouse,
 respectively, was awarded the 1994 Nobel Prize in Physics~\cite{web_nobel1994}.
@@ -77,8 +77,9 @@ G. L. Squires \cite{Squires2012}.
 
 \subsection{Two-axis diffractometers}
 
-A two-axis diffractometer is used for determining the static structure of crystals, which are here typically provided
-in powder form, but can also be single-crystals. It is the single most fundamental kind of machines in the field of
+A two-axis diffractometer is used for determining the static structure of crystals \cite[pp. 89f]{Gross2012},
+which are here typically provided in powder form, but can also be single-crystals.
+It is the single most fundamental kind of machines in the field of
 neutron scattering at research reactors. This instrument type consists of a single-crystal (meaning it comprises one
 single grain), which is called ``monochromator'' and named after its function to pick out one specific wavelength,
 $\lambda_i$, from the polychromatic neutron beam coming from the reactor core or from one of its moderators.
@@ -98,7 +99,8 @@ interpretation of Eq. \ref{eq:bragg} is depicted in Fig. \ref{fig:braggscatterin
 		Bragg scattering on crystal planes having a spacing $d$. An incoming parallel neutron beam is reflected at an
 		angle $2 \cdot \theta_M$ on both the upper and lower crystal plane, leading to a path difference of
 		$2d \sin\theta$ between the beams. If the path difference is an integer multiple of the neutron wavelength,
-		$\lambda_i$, the beams interfere constructively. Figure drawn after \cite[p. 68, Fig. 2.7]{Gross2012}. }
+		$\lambda_i$, the beams interfere constructively, yielding a strong reflection.
+		Figure drawn after \cite[p. 68, Fig. 2.7]{Gross2012}. }
 	\label{fig:braggscattering}
 \end{figure}
 
@@ -129,8 +131,9 @@ The symbol $\hbar$ denotes the reduced Planck's constant, $\hbar = h / \left( 2\
 
 By the intensity of the sample's Bragg reflections, each of which appears at a different scattering angle $2\theta_S$
 and thus momentum transfer $\hbar \underline{Q}$, the so-called static nuclear structure factor \cite[p. 25]{Shirane2002}
-can be reconstructed. Absences of Bragg peaks determine the crystal symmetry given by its space group. Together,
-they determine the structural build-up of the crystal.
+can be reconstructed.
+Absences of Bragg peaks determine the crystal symmetry given by its space group \cite[pp. 13-15]{Gross2012}.
+Together, they determine the structural build-up of the crystal.
 
 
 \subsection{Triple-axis spectrometers}
@@ -149,8 +152,9 @@ is usually many orders of magnitude stronger than inelastic scattering and any i
 would not hide the elastic signals used for crystal structure determination.
 
 Complementary to the two-axis instrument, a triple-axis spectrometer (TAS) is usually not used to study structures,
-but instead measures the dynamics of the sample crystal. The samples used at TAS are usually in single-crystalline form.
-At TAS machines, we are only interested in non-zero energy transfers, i.e. the cases when neutrons scattering from the
+but instead measures the dynamics of the sample crystal \cite[pp. 214-215]{Gross2012}.
+The samples used at TAS are usually in single-crystalline form.
+At TAS machines, we are thus mainly interested in non-zero energy transfers, i.e. the cases when neutrons scattering from the
 sample crystal excite collective modes. These modes typically comprise vibrations of the crystal's nuclei, called phonons,
 which can be imagined as quantised sound waves \cite[pp. 123-137]{Shirane2002}. Another typical example includes the
 coupled motions of the atom hull's electron spins, which are named spin-waves or magnons \cite[pp. 137-144]{Shirane2002}.
