--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -12,11 +12,11 @@
 Vectors in this work are written either as small letters with underscore, e.g. $\underline{v}$, 
 in component notation, e.g. $\left( v^i \right)$, or in Dirac notation \cite{wiki_braket}, which is 
 very popular in physics, e.g. $\left| v \right>$. 
-The first notation is chosen in cases when co- or contravariance does not play a role, 
+The first notation is chosen in cases when co- or contravariance \cite[p. 806]{Arens2015} does not play a role,
 the latter two, when it does. 
 Contravariant vectors in component notation are written with a superscript (this is not a power!), 
 covariant vectors with a subscript.
-Also for the component notation, we furthermore use the Einstein summation convention \cite{wiki_summation},
+Also for the component notation, we furthermore use the Einstein summation convention \cite{wiki_summation} \cite[p. 804]{Arens2015},
 meaning that a sum is implied over indices which appear twice, one in a contravariant, and one
 in a covariant position, e.g.:
 \begin{equation}
@@ -38,13 +38,14 @@ Table \ref{tab:notation} gives details on this notation.
 		\hline
 		$ M^{-1} $ & Inverse of matrix $M$. \tabularnewline
 		\hline
-		$\left| x \right> \,=\, \left( x^i \right) $ & A contravariant vector with superscript index. \tabularnewline
+		$\left| x \right> \,=\, \left( x^i \right) $ & A contravariant vector with superscript index \cite[pp. 806]{Arens2015}. \tabularnewline
 		\hline
-		$\left< x \right| \,=\, \left( x_i \right) $ & A covariant vector with subscript index. \tabularnewline
+		$\left< x \right| \,=\, \left( x_i \right) $ & A covariant vector with subscript index \cite[pp. 806]{Arens2015}. \tabularnewline
 		\hline
-		$s \,=\, \left< x | y \right> \,=\, x_i y^i \,=\, g_{ij} x^i y^j $ & A scalar/inner product, the sums over $i$ and $j$ are implied \cite{wiki_summation}. \tabularnewline
+		$s \,=\, \left< x | y \right> \,=\, x_i y^i \,=\, g_{ij} x^i y^j $ & A scalar/inner product \cite[pp. 808]{Arens2015}, \tabularnewline
+			& the sums over $i$ and $j$ are implied \cite{wiki_summation}. \tabularnewline
 		\hline
-		$\left(a^{i}_{\;j}\right) \,=\, \left| x \right> \left< y \right| \,=\, x^i y_j$ & A tensor/outer product. \tabularnewline
+		$\left(a^{i}_{\;j}\right) \,=\, \left| x \right> \left< y \right| \,=\, x^i y_j$ & A tensor/outer product \cite[pp. 810]{Arens2015}. \tabularnewline
 		\hline
 	\end{tabular}
 	\caption[Symbol notation.]{Notation of used symbols.}
@@ -81,7 +82,7 @@ Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 		\hline
 		GUI              & \underline{G}raphical \underline{U}ser \underline{I}nterface. \tabularnewline
 		\hline
-		ILL              & \underline{I}nstitut \underline{L}aue-\underline{L}angevin, Grenoble, France. \tabularnewline
+		ILL              & \underline{I}nstitut \underline{L}aue-\underline{L}angevin, Grenoble, France \cite{web_ill}. \tabularnewline
 		\hline
 		RLU              & \underline{R}elative \underline{L}attice \underline{U}nits, see chapter \ref{ch:xtal}. \tabularnewline
 		\hline
