--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -460,7 +460,7 @@ and the resulting path is what is called the ``contour-parallel tool path'' in
 the terms of \textit{CNC} (computer numerical control) milling machines \cite{Jeong1998, wiki_milling}, 
 a field where these kinds of paths are utilised. While the bisectors of this case could 
 be used for the spectrometer path mesh, a problem remains: In contrast to a milling
-machine the spectrometer is not supposed to be at the furthest distance of any
+machine the spectrometer is not supposed to be at the farthest distance of any
 polygonal region at all times, but has a starting and ending position which can 
 be close to one of these walls or be at a position near a concave corner which
 is not directly accessible from the present bisector configuration. This problem
