--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -229,7 +229,7 @@ of the axes would pull out a cable or tube.
 
 An early attempt at automatic collision prevention and pathfinding for a triple-axis spectrometer can be found in
 the 2006 work by M\"uhlbauer and Hradil \cite{Muehlbauer2006}, but their method is based on a simple grid search and thus
-does not result in paths which keep the furthest distance to obstacles. A reason for such a solution might be
+does not result in paths which keep the farthest distance to obstacles. A reason for such a solution might be
 that computing power was not sufficient at that time to calculate the mesh of possible paths as it is 
 done with the algorithms to be presented in the current work.
 
