--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -18,7 +18,7 @@ but are also employed in virtual instrument simulators like \textit{vTAS} \cite{
 
 Note that this chapter has already been published in the manual of the software from Ref. \cite{Takin2021}
 and is furthermore based on an earlier version of these derivations from my (physics) PhD thesis 
-\cite[pp. 139-143]{PhDWeber}. Originally, these formula were derived with the aid of the source
+\cite[pp. 139-143]{PhDWeber}. Originally, these formula were re-derived with the aid of the source
 code of \textit{McStas'} \textit{templateTAS} virtual instrument \cite{web_mcstas_templateTAS, McStas2020}.
 
 
