--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -13,6 +13,8 @@ The latest version the software that has been developed
 as part of this work has the DOI (digital object identifier)
 \href{https://doi.org/10.5281/zenodo.4625649}{10.5281/zenodo.4625649}
 and can be found under the URL \url{https://doi.org/10.5281/zenodo.4625649}.
+The source code is also provided on the supplementary medium (CD-ROM and/or USB drive) 
+attached to this work, together with compiled versions.
 Additionally, the main software's development repository is available here: 
 \url{https://code.ill.fr/scientific-software/takin/paths},
 a mirror of the repository can be found here: 
