--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -340,7 +340,7 @@ After a series of scans, the instrument reached a position of
 $Q_\mathrm{start}\,=\,\left(1.5,\ 1.5,\ 0.5\right)\, \mathrm{rlu}$ and  $E_\mathrm{start}\,=\,10\, \mathrm{meV}$, where
 $Q$ and $E$ refer to the momentum and energy transfer from the neutron to the crystal, respectively.
 Here, ``rlu'' stands for \textit{relative lattice units}, see chapter \ref{ch:xtal}, and ``meV'' means energy units of milli-electronvolts,
-which corresponds to the thousandths part of the energy gained by an electron moving through a potential of one volt \cite{TODO}.
+which corresponds to the thousandths part of the energy gained by an electron moving through a potential of one volt \cite{wiki_eV}.
 The real-space position of the instrument corresponding to these crystal coordinates is depicted in Fig. \ref{fig:casestudy_start}.
 The crystal in question was cubic and had the lattice constant of $a = 8.9\,\textup{\AA}$, it was
 oriented in a $(hhl)$ scattering plane, meaning that the plane was spanned by the vectors
