--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -849,6 +849,17 @@
 
 @misc
 {
+	wiki_eV,
+	author = {{Wikipedia contributors}},
+	title = {{Electronvolt --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Electronvolt&oldid=1047185102",
+	note = "[Online; accessed 3-October-2021]"
+}
+
+
+@misc
+{
 	wiki_rodrigues,
 	author = {{Wikipedia contributors}},
 	title = {{Rodrigues' rotation formula --- {Wikipedia}{,} The Free Encyclopedia}},
