--- a/tex/errata.tex
+++ b/tex/errata.tex
@@ -15,11 +15,12 @@ as part of this work has the DOI (digital object identifier)
 and can be found under the URL \url{https://doi.org/10.5281/zenodo.4625649}.
 The source code is also provided on the supplementary medium (CD-ROM and/or USB drive) 
 attached to this work, together with compiled versions.
+
 Additionally, the main software's development repository is available here: 
 \url{https://code.ill.fr/scientific-software/takin/paths},
 a mirror of the repository can be found here: 
 \url{https://github.com/tweber-ill/ill_mirror-takin2-paths}.
-It has furthermore been archived at this address:
+It has furthermore been permanently archived at the address:
 \url{https://archive.softwareheritage.org/browse/origin/?origin_url=https://code.ill.fr/scientific-software/takin/paths}.
 
 The latest version of the software's source code archive (ver-1.0) bears the 
@@ -100,6 +101,9 @@ The source of the thesis text can be found in the repository:
 \url{https://github.com/tweber-ill/ill_mirror-thesis}.
 The archived copy of the repository can be found here:
 \url{https://archive.softwareheritage.org/browse/origin/?origin_url=https://code.ill.fr/tweber/thesis}.
+
+%The thesis has the DOI \href{https://doi.org/TODO}{TODO}
+%and can be found under the URL \url{https://doi.org/TODO}.
 
 
 %\vspace{0.75cm}
