--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -52,8 +52,8 @@
 % Bold math tip from Prof. Icking and https://tex.stackexchange.com/questions/209466/problem-with-tocloft-minitoc-and-bold-math-mode
 \g@addto@macro\bfseries{\mathversion{bold}}
 
-\newcommand{\ill}{\par{Institut Laue-Langevin (ILL), 71 avenue des Martyrs, CS 20156, 38042 Grenoble cedex 9, France\par}}
-\newcommand{\fuh}{\par{Fernuniversit\"at in Hagen (FUH), Universit\"atsstraße 47, 58097 Hagen, Germany\par}}
+\newcommand{\ill}{\par{Institut Laue-Langevin (ILL), 71 avenue des Martyrs, CS 20156, 38042 Grenoble cedex 9, France.\par}}
+\newcommand{\fuh}{\par{Fernuniversit\"at in Hagen (FUH), Universit\"atsstraße 47, 58097 Hagen, Germany.\par}}
 
 \makeatother
 
@@ -70,8 +70,12 @@
 \maketitle
 
 \vspace*{\fill}
-\fuh
-\ill
+\textcopyright{} 2021 by Tobias Weber.
+%DOI: \href{https://doi.org/TODO}{TODO}.
+
+Submitted to: \fuh{}
+
+Work performed at: \ill{}
 
 \tableofcontents
 
